--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Layerboard - Multi-Layer Diagramming</title>
-    <meta name="description" content="Layerboard - A graphical, drag-and-drop diagramming application that embraces abstraction through a unified approach to nodes." />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Layerboard - Multi-Layer Diagramming</title>
+        <meta
+            name="description"
+            content="Layerboard - A graphical, drag-and-drop diagramming application that embraces abstraction through a unified approach to nodes."
+        />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
